# pixelflut-v6

./: Makefile  README.md  calculate-screen-split.py  default.nix  framebuffer.c  framebuffer.h  image.c  image.h  pixelfluter-v6-client.c  pixelfluter-v6-server.c
dpdk-client/: Makefile  image.c  image.h  pixelflut-v6-client.c
dpdk-server/: Makefile  framebuffer.c  framebuffer.h  pixelflut-v6-server.c  pixelfluter-v6-server.c  stats.h
fluter/: Cargo.toml
fluter/src/: args.rs  drawer.rs  main.rs
pixel-fluter/: Cargo.toml
pixel-fluter/src/: args.rs  drawer.rs  main.rs  prometheus_exporter.rs  statistics.rs  ui.rs
pixel-fluter/src/tui/: input_handling.rs  mod.rs  rendering.rs  state.rs
