[package]
name = "pixel-fluter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
shared_memory = { version = "0.12", features = ["logging"] }
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
